main activity implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Dishes</string>
+    <string name="search_hint">Recipe name or ingredients separated with comma</string>
+    <string name="action_search">Search</string>
 </resources>
