loading and errors indicators

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,19 @@
 <resources>
     <string name="app_name">My Dishes</string>
     <string name="favorites_title">Favorites</string>
-    <string name="search_hint">Recipe name or ingredients separated with comma</string>
+    <string name="search_hint">Search&#8230;</string>
     <string name="action_search">Search</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="snake_message_disconnected">No connection</string>
+    <string name="snake_message_connected">Back online</string>
+    <string name="exit_message">Press back again to exit</string>
+    <string name="appwidget_text">Favorites list</string>
     <string name="add_widget">Add widget</string>
+    <string name="admob_test_app_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string name="admob_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="no_search_result_message">Sorry, we couldn\'t find any content for \"%1$s\"</string>
+    <string name="search_default_hint_message">Type a Recipe name or Ingredients saparated with comma</string>
+    <string name="snake_message_add_fav">Recipe added to favorites</string>
+    <string name="snake_message_remove_fav">Recipe removed from favorites</string>
+    <string name="share_intent_title">Share Recipe</string>
+    <string name="share_message_format">Recipe name:\n%1$s\n\nRecipe source:\n%2$s\n\nThis data fetched from Food2Fork Api\nAnd this message sent from My Dishes</string>
 </resources>
